# farmer_welder_metabolomics

./: .gitignore  README.md  environment.yml  pyproject.toml  run_local.sh  setup.py
code/: MCA.R  PLS.py  RF.py  figures.py  load.py  metabolite_summary_stats.py  stats.py
src/farmer_welder/: analysis.py  baseline_analysis.py  baseline_plots.py  create_folders.py  dimension_reduction.py  exploratory_plots.py  merge_data.py  metabolite_summary_stats.py  run_SNF.py  run_cca.py
src/farmer_welder/data/: clean.py  load.py
src/farmer_welder/stats/: affinity.py  cca.py  distances.py  stats.py
src/farmer_welder/visualization/: figures.py
